# steamshim-n

./: LICENSE  README.md
client/c/example/: game.c  meson.build
client/c/source/: client.c  client.h
host/: meson.build
host/sdk/: .gitignore
host/source/: ipc.cxx  ipc.hxx  meson.build  shim.cxx
